# flet-ncnn-test

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/: export_yolo.py  flet_detect_holding.py  main.py  test_yolo.py
src/yolov8n_ncnn_model/: metadata.yaml
