[project]
name = "forge-test"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet >=0.86.0",
    "langchain >=1.3.4",
    "langchain-openai",
    "langgraph",
    "pydantic",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "flet[all] >=0.86.0",
]

[tool.uv]
prerelease = "allow"

[tool.flet]
org = "com.mycompany"
product = "forge-test"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.android]
extract_packages = ["dotenv"]