[project]
name = "sample"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet",
]

[dependency-groups]
dev = [
    "flet[all]",
]

[tool.flet]
org = "com.mycompany"
product = "sample"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

[tool.flet.android]
extract_packages = ["dotenv"]