[project]
name = "sample"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    # direct reference (not [tool.uv.sources]) so `flet build`'s pip
    # packaging bundles the same branch into the app
    "flet @ git+https://github.com/flet-dev/flet.git@test-macos-signing#subdirectory=sdk/python/packages/flet",
]

[dependency-groups]
dev = [
    "flet-cli @ git+https://github.com/flet-dev/flet.git@test-macos-signing#subdirectory=sdk/python/packages/flet-cli",
]

[tool.flet]
org = "com.mycompany"
product = "sample"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
